# parkability

./: .gitignore  LICENSE  NOMINATION.md  README.md  pyproject.toml
data/fixtures/: sample_311.json  sample_car_ownership.json  sample_parking.json  sample_permit_zones.json
data/processed/: community_area_parking_summary.csv  community_area_parking_summary.json  metadata.json  ward_parking_summary.csv  ward_parking_summary.json  zip_parking_summary.csv  zip_parking_summary.json
data/reference/: cook_tract_centroids.csv
parkability/: __init__.py  __main__.py  aggregation.py  geographies.py  geometry.py  measure.py  pipeline.py
parkability/sources/: __init__.py  car_ownership.py  complaints_311.py  parking_osm.py  permit_zones.py
scripts/: run.sh
tests/: test_aggregation.py  test_pipeline.py
