[project]
name = "parkability"
version = "0.1.0"
description = "Ease-of-parking metrics for Chicago by ward / community area / zip. A ward-wise-civic-tech direct-metric source."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parkability", "parkability.sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
